<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <!--Matchup Title-->
    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Game Score-->
    <TextView
        android:id="@+id/game_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/game_score_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Season-->
    <TextView
        android:id="@+id/game_season"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_season_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Date-->
    <TextView
        android:id="@+id/game_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_date_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Home Team City-->
    <TextView
        android:id="@+id/home_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_city_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Home Team Conference-->
    <TextView
        android:id="@+id/home_conference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_conference_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <TextView
        android:id="@+id/visitor_conference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_conference_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
    <!--Game status (regarding season)-->
    <TextView
        android:id="@+id/game_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_status_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5" />
</LinearLayout>
